--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "user-list",
+  "homepage": "https://k-oleksii.github.io/user-list",
   "version": "1.0.0",
   "description": "On the main page we have a list of users from where we can open posts or user albums.",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
+    "deploy": "npm run build && gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,18 +19,27 @@
   "bugs": {
     "url": "https://github.com/k-oleksii/user-list/issues"
   },
-  "homepage": "https://github.com/k-oleksii/user-list#readme",
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "css-loader": "^6.8.1",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
