--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/k-oleksii/user-list/issues"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "clean-webpack-plugin": "^4.0.0",
     "mini-css-extract-plugin": "^2.7.6",
