Added debounce function for the header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/helpers/debounce.ts"],
   "exclude": ["node_modules", "build", "public"]
 }
